--- a/archives/share/data/1.Markdown
+++ b/archives/share/data/1.Markdown
@@ -1,2 +1,66 @@
-# Welcome
-# 正在建设中……
+# GitHub Pages攻略
+## 1.注册账号
+>首先我们登录[https://www.github.com](https://www.github.com)官网进行账号注册。具体操作流程如下图所示：
+
+![](./data/images/share-1-001.jpg)
+
+> 待填好用户名、邮箱和密码并提交信息后，我们登录邮箱会受到一封确认邮件，点击邮件里面链接完成确认注册。弹出如下界面：
+
+![](./data/images/share-1-002.jpg)
+
+## 2.创建仓库
+
+> 我们点击创建新的仓库按钮进入到新建仓库页面,并命名为xxx.github.io（xxx自定，结尾为github.io，这是github的指定域名），如下图所示：
+
+![](./data/images/share-1-003.jpg)
+
+> 创建仓库提交后如下图所示，这时候我们已经可以访问 xxx.github.io 网址了，但是仓库中没有index.html文件，会返回404错误。
+
+![](./data/images/share-1-004.jpg)
+
+## 3.添加页面
+
+> 我们使用github提供的自动创建首页功能进行创建，点击上图中的Setting选项进入如下界面：
+
+![](./data/images/share-1-005.jpg)
+
+> 设置页面首页标题和内容，自己填写也可以，也可以加载ReadMe文件内容，然后点击Layout进行页面布局，完成后进行发布：
+
+![](./data/images/share-1-006.jpg)
+
+> 浏览器地址栏输入xxx.github.io进行访问，效果如下，到此为止，github pags项目就算初步完成了，后期可使用git进行静态页面的修改可维护，但是只支持html,JavaScript,Css等静态文件。
+
+![](./data/images/share-1-007.jpg)
+
+## 4.进一步设置
+
+> 我们可是使用CNAME设置，绑定自己个性的域名，具体方法是在项目根目录下添加一个名称为CNAME的文件（注意大写，没有后缀），然后在其中写上自己的域名，如下图：
+
+![](./data/images/share-1-008.jpg)
+
+> 使用ping命令，对xxx.github.io进行IP地址查询，并查询到的IP设置到CNAME中填写域名的A记录中，生效后我们就可以使用[http://www.aipp.vip]()进行站点访问了。
+
+![](./data/images/share-1-009.jpg)
+
+| 记录类型 |  主机记录 |    记录值  |
+|---------| -------- |------------|
+| A记录   |   www     | 103.x.x.103 |
+
+## 5.域名跳转改造
+
+> 现在[http://www.aipp.vip]()可以访问站点了，站点源代码又可以通过git进行修改和维护，那么我们把主页内容进行修改，就利用html或者js实现域名动态跳转了，可以解决域名未备案时临时跳转问题。例如跳转到百度首页，
+代码如下：
+
+```html
+<html>
+<head>
+<meta http-equiv="refresh" content="0.1;url=http://www.baidu.com"> 
+</head>
+<body></body>
+</html>
+```
+
+## 6.剩下的内容就靠大家自行开发了~ 
+#### 欢迎访问[Aipp.vip](http://www.aipp.vip)站点。
+#### 文章版权归[Aipp.vip](http://www.aipp.vip)所有，欢迎非商业转载分享，转载请注明出处：[http://www.aipp.vip]()
+#### 商业使用请联系站长。
